@startuml

title Frui.ts screens

class ScreenBase {
  +parent: IConductor<ScreenBase>
  +requestClose(): Promise

  __ Activation logic __
  +isActive: boolean
  +activate(): Promise
  +deactivate(close: boolean): Promise
  +canDeactivate(): Promise<boolean> | boolean

  .. Activation hooks ..
  #onInitialize(): Promise
  #onActivate(): Promise
  #onDeactivate(boolean close): Promise

  __ Navigation functions __
  +navigate(subPath: string, params: any): Promise<any> | void
  +getNavigationPath(): NavigationPath
  +get navigationParams(): any
}
note right
  Use this if there are no child view models
  or you want to manage their activation
  and navigation cycle manually
end note

IScreen ()- ScreenBase
ScreenBase -() IChild
ScreenBase -() ICanNavigate

abstract class ConductorBase {
  {abstract} +tryActivateChild(child: TChild): Promise
  +closeChild(child: TChild, forceClose = false): Promise<boolean> | boolean

  __ Navigation functions __
  +navigate(subPath: string, params: any): Promise<any> | void
  +getChildNavigationPath(child: TChild, childParams?: any): NavigationPath

  .. Extension functions ..
  #findNavigationChild(navigationName: string): Promise<TChild> | TChild
  #onChildNavigated(child): Promise<any> | void
}

ConductorBase --|> ScreenBase
ConductorBase -() IConductor
INavigationParent ()- ConductorBase

abstract class ConductorBaseWithActiveChild {
  +activeChild: TChild

  #changeActiveChild(newChild: TChild, closePrevious: boolean): Promise
}

ConductorBaseWithActiveChild --|> ConductorBase
IHasActiveChild ()- ConductorBaseWithActiveChild

class ConductorSingleChild {
}
note left
  Use this if there is no finite list of children
  that the user might choose from such as ad-hoc opened children
end note

ConductorSingleChild --|> ConductorBaseWithActiveChild

class ConductorOneChildActive {
  +children: TChild[]
}
note right
  Use this if there is a finite list of potential children
  where only one can be active at a time such as module with sub-pages.
end note

ConductorOneChildActive --|> ConductorBaseWithActiveChild

class ConductorAllChildrenActive {
  +children: TChild[]
}
note right
  Use this if there is a finite list of potential children
  where all can be active at the same time
  such as MDI (multiple document interface).
end note

ConductorAllChildrenActive --|> ConductorBase

@enduml
